モディファイアの設定ダイアログを実装

--- a/curve_editor/curve_editor.vcxproj
+++ b/curve_editor/curve_editor.vcxproj
@@ -198,14 +198,16 @@ copy "$(TargetPath)" "C:\Program_Files_Portable\AviUtl\aviutl-110-092\plugins"</
     <ClInclude Include="dialog_about.hpp" />
     <ClInclude Include="dialog_bezier_param.hpp" />
     <ClInclude Include="dialog_curve_code.hpp" />
-    <ClInclude Include="dialog_curve_discretization.hpp" />
+    <ClInclude Include="dialog_modifier_discretization.hpp" />
     <ClInclude Include="dialog_id_jumpto.hpp" />
+    <ClInclude Include="dialog_modifier.hpp" />
     <ClInclude Include="dialog_pref.hpp" />
     <ClInclude Include="dialog_pref_appearance.hpp" />
     <ClInclude Include="dialog_pref_behavior.hpp" />
     <ClInclude Include="dialog_pref_editing.hpp" />
     <ClInclude Include="dialog_pref_general.hpp" />
     <ClInclude Include="dialog_warning_autosaver.hpp" />
+    <ClInclude Include="discretizer.hpp" />
     <ClInclude Include="drag_and_drop.hpp" />
     <ClInclude Include="enum.hpp" />
     <ClInclude Include="config.hpp" />
@@ -232,8 +234,10 @@ copy "$(TargetPath)" "C:\Program_Files_Portable\AviUtl\aviutl-110-092\plugins"</
     <ClInclude Include="menu_graph.hpp" />
     <ClInclude Include="menu_id.hpp" />
     <ClInclude Include="menu_more.hpp" />
+    <ClInclude Include="modifier.hpp" />
     <ClInclude Include="my_button.hpp" />
     <ClInclude Include="my_messagebox.hpp" />
+    <ClInclude Include="noiser.hpp" />
     <ClInclude Include="notification.hpp" />
     <ClInclude Include="preferences.hpp" />
     <ClInclude Include="trackbar_button.hpp" />
@@ -276,14 +280,16 @@ copy "$(TargetPath)" "C:\Program_Files_Portable\AviUtl\aviutl-110-092\plugins"</
     <ClCompile Include="dialog_about.cpp" />
     <ClCompile Include="dialog_bezier_param.cpp" />
     <ClCompile Include="dialog_curve_code.cpp" />
-    <ClCompile Include="dialog_curve_discretization.cpp" />
+    <ClCompile Include="dialog_modifier_discretization.cpp" />
     <ClCompile Include="dialog_id_jumpto.cpp" />
+    <ClCompile Include="dialog_modifer.cpp" />
     <ClCompile Include="dialog_pref.cpp" />
     <ClCompile Include="dialog_pref_appearance.cpp" />
     <ClCompile Include="dialog_pref_behavior.cpp" />
     <ClCompile Include="dialog_pref_editing.cpp" />
     <ClCompile Include="dialog_pref_general.cpp" />
     <ClCompile Include="dialog_warning_autosaver.cpp" />
+    <ClCompile Include="discretizer.cpp" />
     <ClCompile Include="drag_and_drop.cpp" />
     <ClCompile Include="filter_exit.cpp" />
     <ClCompile Include="filter_init.cpp" />
@@ -298,6 +304,7 @@ copy "$(TargetPath)" "C:\Program_Files_Portable\AviUtl\aviutl-110-092\plugins"</
     <ClCompile Include="menu_graph.cpp" />
     <ClCompile Include="menu_id.cpp" />
     <ClCompile Include="menu_more.cpp" />
+    <ClCompile Include="noiser.cpp" />
     <ClCompile Include="preferences.cpp" />
     <ClCompile Include="trackbar_button.cpp" />
     <ClCompile Include="util.cpp" />
