--- a/curve_editor/curve_editor.vcxproj
+++ b/curve_editor/curve_editor.vcxproj
@@ -198,9 +198,10 @@ copy "$(TargetPath)" "C:\Program_Files_Portable\AviUtl\aviutl-110-092\plugins"</
     <ClInclude Include="dialog_about.hpp" />
     <ClInclude Include="dialog_bezier_param.hpp" />
     <ClInclude Include="dialog_curve_code.hpp" />
-    <ClInclude Include="dialog_modifier_discretization.hpp" />
+    <ClInclude Include="dialog_modifier_discretizer.hpp" />
     <ClInclude Include="dialog_id_jumpto.hpp" />
     <ClInclude Include="dialog_modifier.hpp" />
+    <ClInclude Include="dialog_modifier_noiser.hpp" />
     <ClInclude Include="dialog_pref.hpp" />
     <ClInclude Include="dialog_pref_appearance.hpp" />
     <ClInclude Include="dialog_pref_behavior.hpp" />
@@ -280,9 +281,10 @@ copy "$(TargetPath)" "C:\Program_Files_Portable\AviUtl\aviutl-110-092\plugins"</
     <ClCompile Include="dialog_about.cpp" />
     <ClCompile Include="dialog_bezier_param.cpp" />
     <ClCompile Include="dialog_curve_code.cpp" />
-    <ClCompile Include="dialog_modifier_discretization.cpp" />
+    <ClCompile Include="dialog_modifier_discretizer.cpp" />
     <ClCompile Include="dialog_id_jumpto.cpp" />
     <ClCompile Include="dialog_modifer.cpp" />
+    <ClCompile Include="dialog_modifier_noiser.cpp" />
     <ClCompile Include="dialog_pref.cpp" />
     <ClCompile Include="dialog_pref_appearance.cpp" />
     <ClCompile Include="dialog_pref_behavior.cpp" />
@@ -304,6 +306,7 @@ copy "$(TargetPath)" "C:\Program_Files_Portable\AviUtl\aviutl-110-092\plugins"</
     <ClCompile Include="menu_graph.cpp" />
     <ClCompile Include="menu_id.cpp" />
     <ClCompile Include="menu_more.cpp" />
+    <ClCompile Include="modifier.cpp" />
     <ClCompile Include="noiser.cpp" />
     <ClCompile Include="preferences.cpp" />
     <ClCompile Include="trackbar_button.cpp" />
