--- a/.gitmodules
+++ b/.gitmodules
@@ -2,9 +2,6 @@
 	path = curve_editor/external/json
 	url = https://github.com/nlohmann/json
 	branch = master
-[submodule "curve_editor/external/PerlinNoise"]
-	path = curve_editor/external/PerlinNoise
-	url = https://github.com/Reputeless/PerlinNoise
 [submodule "curve_editor/external/strconv"]
 	path = curve_editor/external/strconv
 	url = https://github.com/javacommons/strconv
@@ -15,3 +12,9 @@
 	path = curve_editor/external/aviutl-mkaul
 	url = https://github.com/mimaraka/aviutl-mkaul
 	branch = develop
+[submodule "curve_editor/external/cereal"]
+	path = curve_editor/external/cereal
+	url = https://github.com/USCiLab/cereal.git
+[submodule "curve_editor/external/FastNoiseLite"]
+	path = curve_editor/external/FastNoiseLite
+	url = https://github.com/Auburn/FastNoiseLite.git
