--- a/.gitmodules
+++ b/.gitmodules
@@ -18,3 +18,6 @@
 [submodule "curve_editor/external/FastNoiseLite"]
 	path = curve_editor/external/FastNoiseLite
 	url = https://github.com/Auburn/FastNoiseLite.git
+[submodule "curve_editor/external/sol2"]
+	path = curve_editor/external/sol2
+	url = https://github.com/ThePhD/sol2.git
