--- a/curve_editor/curve_editor.vcxproj
+++ b/curve_editor/curve_editor.vcxproj
@@ -203,7 +203,7 @@ node "$(ProjectDir)minify.js" "$(OutDir)ui"</Command>
     <ClInclude Include="curve_value.hpp" />
     <ClInclude Include="dialog.hpp" />
     <ClInclude Include="dialog_about.hpp" />
-    <ClInclude Include="dialog_bezier_param.hpp" />
+    <ClInclude Include="dialog_curve_param.hpp" />
     <ClInclude Include="dialog_curve_code.hpp" />
     <ClInclude Include="dialog_modifier_discretization.hpp" />
     <ClInclude Include="dialog_id_jumpto.hpp" />
@@ -218,6 +218,7 @@ node "$(ProjectDir)minify.js" "$(OutDir)ui"</Command>
     <ClInclude Include="dialog_pref_general.hpp" />
     <ClInclude Include="dialog_warning_autosaver.hpp" />
     <ClInclude Include="host_object_curve_normal.hpp" />
+    <ClInclude Include="host_object_editor_script.hpp" />
     <ClInclude Include="modifier_discretization.hpp" />
     <ClInclude Include="drag_and_drop.hpp" />
     <ClInclude Include="enum.hpp" />
@@ -238,7 +239,7 @@ node "$(ProjectDir)minify.js" "$(OutDir)ui"</Command>
     <ClInclude Include="host_object_curve_graph.hpp" />
     <ClInclude Include="host_object_curve_linear.hpp" />
     <ClInclude Include="host_object_editor.hpp" />
-    <ClInclude Include="host_object_grapheditor.hpp" />
+    <ClInclude Include="host_object_editor_graph.hpp" />
     <ClInclude Include="host_object_config.hpp" />
     <ClInclude Include="json_loader.hpp" />
     <ClInclude Include="menu.hpp" />
@@ -281,7 +282,7 @@ node "$(ProjectDir)minify.js" "$(OutDir)ui"</Command>
     <ClCompile Include="curve_graph.cpp" />
     <ClCompile Include="dialog.cpp" />
     <ClCompile Include="dialog_about.cpp" />
-    <ClCompile Include="dialog_bezier_param.cpp" />
+    <ClCompile Include="dialog_curve_param.cpp" />
     <ClCompile Include="dialog_curve_code.cpp" />
     <ClCompile Include="dialog_modifier_discretization.cpp" />
     <ClCompile Include="dialog_id_jumpto.cpp" />
@@ -329,7 +330,7 @@ node "$(ProjectDir)minify.js" "$(OutDir)ui"</Command>
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
       </ExcludedFromBuild>
     </ClCompile>
-    <ClCompile Include="host_object_grapheditor.cpp" />
+    <ClCompile Include="host_object_editor_graph.cpp" />
     <ClCompile Include="host_object_curve_graph.cpp" />
     <ClCompile Include="json_loader.cpp" />
     <ClCompile Include="menu.cpp" />
