--- a/.gitignore
+++ b/.gitignore
@@ -362,8 +362,5 @@ MigrationBackup/
 # Fody - auto-generated XML schema
 FodyWeavers.xsd
 
-# JavaScript library files
-curve_editor/ui/js/libs/
-
-# Font Awesome
-curve_editor/ui/fontawesome/
+# Webpack build files
+curve_editor/ui/dist/
