--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -9,3 +9,8 @@ updates:
     directory: "/curve_editor/ui" # Location of package manifests
     schedule:
       interval: "weekly"
+
+  - package-ecosystem: "nuget" # See documentation for possible values
+    directory: "/curve_editor" # Location of package manifests
+    schedule:
+      interval: "weekly"
