--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -11,6 +11,6 @@ updates:
       interval: "weekly"
 
   - package-ecosystem: "nuget" # See documentation for possible values
-    directory: "/curve_editor" # Location of package manifests
+    directory: "/" # Location of package manifests
     schedule:
       interval: "weekly"
