--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -7,5 +7,6 @@ version: 2
 updates:
   - package-ecosystem: "npm" # See documentation for possible values
     directory: "/curve_editor/ui" # Location of package manifests
+    target-branch: "develop"
     schedule:
       interval: "weekly"
