--- a/.github/workflows/test_build.yml
+++ b/.github/workflows/test_build.yml
@@ -14,6 +14,12 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
 
+      - name: Setup NuGet
+        uses: NuGet/setup-nuget@v2
+
+      - name: Restore NuGet packages
+        run: nuget restore curve_editor.sln
+
       - name: Setup MSBuild
         uses: microsoft/setup-msbuild@v2
 
