--- a/.github/workflows/test_build.yml
+++ b/.github/workflows/test_build.yml
@@ -13,6 +13,8 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
+        with:
+          submodules: 'recursive'
 
       - name: Setup NuGet
         uses: NuGet/setup-nuget@v2
